# rust_lab4

./: Cargo.toml
src/: firebase.rs  main.rs
static/: chat.html  index.html  select_chat.html
