[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
actix-files = "0.6.6"
actix-web-actors = "4.3.1"
reqwest = {version = "0.12.9", features = ["json"] }
tokio = {version = "1.42.0", features = ["full"] }
urlencoding = "2.1.3"
actix = "0.13.5"
